--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Games created in reactJS" />
+  <meta property='og:title' content='Snake game created in ReactJS' />
+  <meta property='og:image' content='https://duskoperic.com/dpimg/snake.jpg' />
+  <meta property='og:description' content='Retro snake game created in ReactJS just for fun' />
+  <meta property='og:url' content='https://duskoperic.com/dp-games' />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
